# oxc-angular-testing

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release-npm.yml
crates/ng-transform/: Cargo.toml
crates/ng-transform-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/ng-transform-napi/src/: lib.rs  tsconfig.ts
crates/ng-transform-napi/test/: angular-jit.test.mts  coverage-differential.test.mts  transform.test.mts  tsconfig.test.mts
crates/ng-transform/src/: delegate_ctor.rs  esm_to_cjs.rs  jest_hoist.rs  jit_transform.rs  lib.rs  options.rs  resources.rs  runtime_helpers.rs
crates/ng-transform/tests/: delegate_ctor_test.rs  esm_to_cjs_test.rs  jest_hoist_test.rs  jit_transform_test.rs  jsx_test.rs  lowering_test.rs  resources_test.rs  smoke_test.rs  source_map_test.rs
scripts/: link-local.sh  set-version.mjs
