[package]
name = "ng_transform_napi"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "napi bindings for @oxc-angular-testing/transform"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
ng-transform = { path = "../ng-transform" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
