[package]
name = "ng-transform"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Angular test transforms (resource inlining, decorator downleveling, signal initializer APIs) on oxc, with optional istanbul coverage instrumentation in a single AST pass."

[dependencies]
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_codegen.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
oxc_transformer.workspace = true
oxc_traverse.workspace = true
oxc_coverage_instrument.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
